# agent-driven-docker-executer-toolkit

./: .gitignore  LANGGRAPH.md  README.md
examples/helloworld/: README.md  run_helloworld.py
examples/nodejs-helloworld/: Dockerfile  README.md  package.json  run_nodejs_helloworld.py  server.js
go/: go.mod  go.sum  test_adde_cli.ps1
go/cmd/adde/: cli_exe_test.go  main.go
go/pkg/executor/: build.go  cleanup.go  constants.go  context.go  create.go  exec.go  execute.go  images.go  logs.go  prune.go  pull.go  registry_auth.go  types.go
python/: pyproject.toml  requirements.txt
python/adde/: __init__.py  client.py
python/adde.egg-info/: PKG-INFO  SOURCES.txt
python/tests/: __init__.py  test_client.py
